kubectl_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: "hmpps-reference-data-blue"
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - hmpps-reference-data.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: hmpps-reference-data.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: http
